# virtual-methods-returning-Awaitable

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  dynamic_awaiter.h  dynamic_awaiter_lambdas.hpp  dynamic_awaiter_virtual_base.hpp  dynamic_awaiter_virtual_interface.hpp
benchmark/: dynamic_awaiter_impl.hpp  new_future_impl.hpp  shared_data_case.cpp  simple_coro.h
benchmark/results/: benchmark_dynamic_awaiter.txt  benchmark_new_future.txt  benchmark_virtual_awaiter.txt  dynamic_awaiter_lambdas.txt  dynamic_awaiter_virtual_base.txt  dynamic_awaiter_virtual_interface.txt
tests/: dynamic_awaiter.cpp  virtual_awaiter.cpp
